# personalized-career-coach-agent-system_optimized

./: .gitignore  PROJECT_BRIEF.md  PROJECT_COMPLETION_SUMMARY.md  README.md  README_BACKEND.md  README_FRONTEND.md  package.json
apps/api/: env.example  pyproject.toml
apps/api/talentflux_api/: _INSTRUCTIONS.md  main.py
apps/api/talentflux_api/core/: config.py
apps/web/: env.example  next.config.js  package.json  tailwind.config.js
apps/web/src/app/: _INSTRUCTIONS.md  globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/pipeline/: page.tsx
apps/web/src/components/: providers.tsx
apps/web/src/components/layout/: Header.tsx  Sidebar.tsx
apps/web/src/types/: index.ts
docs/: API_SPEC.md  CLAUDE.md  PROMPT_DECLARATION.md  REPO_MAP.md
scripts/: dev.bat  dev.sh
